--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,5 +8,6 @@
 - include: configure_satellite.yml
 - include: configure_capsule.yml
 - include: configure_content.yml
+- include: ldap.yml
 - include: email.yml
 - include: backup.yml
